# xara

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/: README.md
cfg/: discretizor.ui
documentation/: tutorial.org
jwst/: jwst_nircam_pupil.py  jwst_nircam_run.py  jwst_niriss.py  jwst_niriss_pupil.py  nircam_clear_pupil.txt  niriss_clear_pupil.fits  niriss_clear_pupil.txt  niriss_clear_pupil_hex.fits  niriss_clear_pupil_hex.txt  niriss_nrm_pupil.txt  pupil_model.txt
notebooks/: niriss_kerphase.ipynb
src/xara/: __init__.py  core.py  fitting.py  kpi.py  kpo.py
tests/: pharo_end_to_end.py  test_core.py  test_kpo.py
tests/data/PHARO/: ca1_cube.fits  ca2_cube.fits  tgt_cube.fits
xara/: __init__.py  calwebb_kpi3.py  calwebb_utils.py  cameras.py  core.py  fitting.py  golay9.txt  hst.txt  iwfs.py  kpi.py  kpo.py  palomar_med_cross.txt  subaru_asym.txt  tmt.txt  try_nicmos.py
